<resources>
    <string name="key_omnipod_pod_state" translatable="false">AAPS.Omnipod.pod_state</string>
    <string name="key_omnipod_current_bolus" translatable="false">AAPS.Omnipod.current_bolus</string>
    <string name="key_omnipod_bolus_beeps_enabled" translatable="false">AAPS.Omnipod.bolus_beeps_enabled</string>
    <string name="key_omnipod_basal_beeps_enabled" translatable="false">AAPS.Omnipod.basal_beeps_enabled</string>
    <string name="key_omnipod_smb_beeps_enabled" translatable="false">AAPS.Omnipod.smb_beeps_enabled</string>
    <string name="key_omnipod_tbr_beeps_enabled" translatable="false">AAPS.Omnipod.tbr_beeps_enabled</string>
    <string name="key_omnipod_suspend_delivery_button_enabled" translatable="false">AAPS.Omnipod.suspend_delivery_button_enabled</string>
    <string name="key_omnipod_pulse_log_button_enabled" translatable="false">AAPS.Omnipod.pulse_log_button_enabled</string>
    <string name="key_omnipod_riley_link_stats_button_enabled" translatable="false">AAPS.Omnipod.rileylink_stats_button_enabled</string>
    <string name="key_omnipod_battery_change_logging_enabled" translatable="false">AAPS.Omnipod.enable_battery_change_logging</string>
    <string name="key_omnipod_time_change_event_enabled" translatable="false">AAPS.Omnipod.time_change_enabled</string>
    <string name="key_omnipod_expiration_reminder_enabled" translatable="false">AAPS.Omnipod.expiration_reminder_enabled</string>
    <string name="key_omnipod_expiration_reminder_hours_before_shutdown" translatable="false">AAPS.Omnipod.expiration_reminder_hours_before_shutdown</string>
    <string name="key_omnipod_low_reservoir_alert_enabled" translatable="false">AAPS.Omnipod.low_reservoir_alert_enabled</string>
    <string name="key_omnipod_low_reservoir_alert_units" translatable="false">AAPS.Omnipod.low_reservoir_alert_units</string>
    <string name="key_omnipod_automatically_acknowledge_alerts_enabled" translatable="false">AAPS.Omnipod.automatically_acknowledge_alerts_enabled</string>
    <string name="key_omnipod_notification_uncertain_tbr_sound_enabled" translatable="false">AAPS.Omnipod.notification_uncertain_tbr_sound_enabled</string>
    <string name="key_omnipod_notification_uncertain_smb_sound_enabled" translatable="false">AAPS.Omnipod.notification_uncertain_smb_sound_enabled</string>
    <string name="key_omnipod_notification_uncertain_bolus_sound_enabled" translatable="false">AAPS.Omnipod.notification_uncertain_bolus_sound_enabled</string>
    <string name="key_omnipod_tbrs_set" translatable="false">AAPS.Omnipod.tbrs_set</string>
    <string name="key_omnipod_std_boluses_delivered" translatable="false">AAPS.Omnipod.std_boluses_delivered</string>
    <string name="key_omnipod_smb_boluses_delivered" translatable="false">AAPS.Omnipod.smb_boluses_delivered</string>
    <string name="omnipod_name" translatable="false">Omnipod</string>
    <string name="omnipod_name_short" translatable="false">Pod</string>
    <string name="omnipod_frequency" translatable="false">Omnipod (433.91 MHz)</string>
    <string name="omnipod_lot" translatable="false">LOT</string>
    <string name="omnipod_tid" translatable="false">TID</string>
    <string name="omnipod_firmware_version_value" translatable="false">PM %1$s / PI %2$s</string>
    <string name="omnipod_time_with_timezone" translatable="false">%1$s (%2$s)</string>
    <string name="omnipod_two_strings_concatenated_by_colon" translatable="false">%1$s: %2$s</string>
    <string name="omnipod_overview_last_bolus_value" translatable="false">%1$.2f %2$s (%3$s)</string>
    <string name="omnipod_config_riley_link_configuration">RileyLink Configuration</string>
    <string name="omnipod_config_bolus_beeps_enabled">Bolus beeps enabled</string>
    <string name="omnipod_config_basal_beeps_enabled">Basal beeps enabled</string>
    <string name="omnipod_config_smb_beeps_enabled">SMB beeps enabled</string>
    <string name="omnipod_config_tbr_beeps_enabled">TBR beeps enabled</string>
    <string name="omnipod_config_suspend_delivery_button_enabled">Show Suspend Delivery button in Omnipod tab</string>
    <string name="omnipod_config_pulse_log_button_enabled">Show Pulse Log button in Pod Management menu</string>
    <string name="omnipod_config_rileylink_stats_button_enabled">Show RileyLink Stats button in Pod Management menu</string>
    <string name="omnipod_config_battery_change_logging_enabled">Enable battery change logging in Actions</string>
    <string name="omnipod_config_time_change_enabled">DST/Time zone detection enabled</string>
    <string name="omnipod_config_expiration_reminder_enabled">Expiration reminder enabled</string>
    <string name="omnipod_config_expiration_reminder_hours_before_shutdown">Hours before shutdown</string>
    <string name="omnipod_config_low_reservoir_alert_enabled">Low reservoir alert enabled</string>
    <string name="omnipod_config_low_reservoir_alert_units">Number of units</string>
    <string name="omnipod_config_notification_uncertain_tbr_sound_enabled">Sound for uncertain TBR notifications enabled</string>
    <string name="omnipod_config_notification_uncertain_smb_sound_enabled">Sound for uncertain SMB notifications enabled</string>
    <string name="omnipod_config_notification_uncertain_bolus_sound_enabled">Sound for uncertain bolus notifications enabled</string>
    <string name="omnipod_config_automatically_acknowledge_alerts">Automatically acknowledge Pod alerts</string>
    <string name="omnipod_preference_category_rileylink">RileyLink</string>
    <string name="omnipod_preference_category_other">Other</string>
    <string name="omnipod_preference_category_alerts">Alerts</string>
    <string name="omnipod_preference_category_confirmation_beeps">Confirmation Beeps</string>
    <string name="omnipod_preference_category_notifications">Notifications</string>
    <string name="omnipod_pod_status_no_active_pod">No Active Pod</string>
    <string name="omnipod_pod_status_waiting_for_activation">Setup in progress (waiting for Pod activation)</string>
    <string name="omnipod_pod_status_waiting_for_cannula_insertion">Setup in progress (waiting for cannula insertion)</string>
    <string name="omnipod_pod_status_running">Running</string>
    <string name="omnipod_pod_status_suspended">Suspended</string>
    <string name="omnipod_pod_status_pod_fault">Pod Fault</string>
    <string name="omnipod_pod_status_activation_time_exceeded">Activation time exceeded</string>
    <string name="omnipod_pod_status_inactive">Inactive</string>
    <string name="omnipod_pod_status_pod_fault_description">Pod Fault: %1$03d %2$s</string>
    <string name="omnipod_alert_finish_pairing_reminder">Finish pairing reminder</string>
    <string name="omnipod_alert_finish_setup_reminder_reminder">Finish setup reminder</string>
    <string name="omnipod_alert_expiration">Pod will expire soon</string>
    <string name="omnipod_alert_expiration_advisory">Pod will expire soon</string>
    <string name="omnipod_alert_shutdown_imminent">Shutdown is imminent</string>
    <string name="omnipod_alert_low_reservoir">Low Reservoir</string>
    <string name="omnipod_alert_unknown_alert">Unknown Alert</string>
    <string name="omnipod_history_title">Pod History</string>
    <string name="omnipod_history_item_description">Description</string>
    <string name="omnipod_history_item_source">Source</string>
    <string name="omnipod_history_item_date">Date</string>
    <string name="omnipod_history_type">Type:</string>
    <string name="omnipod_history_bolus_value">%1$.2f U</string>
    <string name="omnipod_history_bolus_value_with_carbs">%1$.2f U, CH=%2$.1f g</string>
    <string name="omnipod_history_tbr_value">Rate: %1$.2f U, duration: %2$d minutes</string>
    <string name="omnipod_short_status_no_active_pod">No Active Pod</string>
    <string name="omnipod_short_status_last_connection">LastConn: %1$d min ago</string>
    <string name="omnipod_short_status_last_bolus">LastBolus: %1$s @ %2$s</string>
    <string name="omnipod_short_status_temp_basal">Temp: %1$s</string>
    <string name="omnipod_short_status_extended_bolus">Extended: %1$s</string>
    <string name="omnipod_short_status_reservoir">Reserv: %1$sU</string>
    <string name="omnipod_short_status_rl_battery">RLBatt: %1$d</string>
    <string name="omnipod_warning">Warning</string>
    <string name="omnipod_error_rileylink_address_invalid">RileyLink address invalid.</string>
    <string name="omnipod_error_operation_not_possible_no_configuration">Operation is not possible.\n\nYou need to configure Omnipod first, before you can use this operation.</string>
    <string name="omnipod_error_pod_not_attached">No active Pod</string>
    <string name="omnipod_error_time_out_of_sync">The time on the Pod is out of sync. Please update the time in the Omnipod tab.</string>
    <string name="omnipod_error_unexpected_exception">An unexpected error occurred. Please report! (%1$s: %2$s).</string>
    <string name="omnipod_error_crc_mismatch">Communication failed: message integrity verification failed</string>
    <string name="omnipod_error_invalid_packet_type">Communication failed: received an invalid packet from the Pod</string>
    <string name="omnipod_error_invalid_progress_state">Communication failed: the Pod is in a wrong state</string>
    <string name="omnipod_error_invalid_response">Communication failed: received an invalid response from the Pod</string>
    <string name="omnipod_error_invalid_message_sequence_number">Communication failed: received a message with an invalid sequence number from the Pod</string>
    <string name="omnipod_error_invalid_message_address">Communication failed: received a message with an invalid address from the Pod</string>
    <string name="omnipod_error_message_decoding_failed">Communication failed: failed to decode message from the Pod</string>
    <string name="omnipod_error_nonce_resync_failed">Communication failed: nonce resync failed</string>
    <string name="omnipod_error_nonce_out_of_sync">Communication failed: nonce out of sync</string>
    <string name="omnipod_error_not_enough_data">Communication failed: not enough data received from the Pod</string>
    <string name="omnipod_error_pod_fault">A Pod fault (%1$03d %2$s) has been detected. Please deactivate your Pod and activate a new one</string>
    <string name="omnipod_error_pod_returned_error_response">Communication failed: the Pod returned an error response</string>
    <string name="omnipod_error_communication_failed_no_response_from_riley_link">No response from RileyLink</string>
    <string name="omnipod_error_communication_failed_riley_link_interrupted">RileyLink interrupted</string>
    <string name="omnipod_error_communication_failed_no_response_from_pod">No response from Pod</string>
    <string name="omnipod_error_set_basal_failed_delivery_might_be_suspended">Setting basal profile failed. Delivery might be suspended! Please manually refresh the Pod status from the Omnipod tab and resume delivery if needed.</string>
    <string name="omnipod_error_set_basal_might_have_failed_delivery_might_be_suspended">Setting basal profile might have failed. Delivery might be suspended! Please manually refresh the Pod status from the Omnipod tab and resume delivery if needed.</string>
    <string name="omnipod_error_set_basal_failed_delivery_suspended">Setting basal profile failed. Delivery is suspended! Please manually resume delivery from the Omnipod tab.</string>
    <string name="omnipod_error_set_basal_failed">Setting basal profile failed.</string>
    <string name="omnipod_error_cancel_temp_basal_failed_uncertain">Cancelling temp basal might have failed. Please manually refresh the Pod status from the Omnipod tab.</string>
    <string name="omnipod_error_set_temp_basal_failed_old_tbr_might_be_cancelled">Setting temp basal failed. If a temp basal was previously running, it might have been cancelled. Please manually refresh the Pod status from the Omnipod tab.</string>
</resources>